# flask-example

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  files.py  filters.py  forms.py  models.py  routes.py
app/templates/: index.html  login.html  profile.html
app/templates/bootstrap/: base.html
app/templates/users/: list.html  user.html
app/users/: __init__.py  models.py  routes.py
flask_postgres/: app.py  config.py
migrations/versions/: 82c2ee425d55_add_password_and_timestamps_to_user.py  9b8db7ee069f_added_permissions.py  e6b4303b30de_initial_migration.py
scripts/: get_user.py
tests/: conftest.py  test_cli.py  test_files.py  test_filters.py  test_models.py  test_routes.py
