[tool.poetry]
name = "flask_postgres"
version = "0.1.0"
description = ""
authors = ["aodin <aaronoellis@gmail.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.1"
Flask = "^2.0.1"
Flask-Mail = "^0.9.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
SQLAlchemy-Utils = "^0.37.8"
moto = {extras = ["s3"], version = "^2.2.4"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
