[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["aodin <aaronoellis@gmail.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.5"
Flask = "^2.2.2"
Flask-Login = "^0.6.2"
Flask-Migrate = "^4.0.0"
Flask-Mail = "^0.9.1"
Flask-SQLAlchemy = "^3.0.2"
Flask-WTF = "^1.0.1"
SQLAlchemy-Utils = "^0.38.3"
moto = {extras = ["s3"], version = "^4.0.11"}
email-validator = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
