[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["aodin <aaronoellis@gmail.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
Flask = "^2.2.3"
Flask-Login = "^0.6.2"
Flask-Migrate = "^4.0.4"
Flask-Mail = "^0.9.1"
Flask-SQLAlchemy = "^3.0.3"
Flask-WTF = "^1.1.1"
SQLAlchemy-Utils = "^0.40.0"
moto = {extras = ["s3"], version = "^4.1.4"}
email-validator = "^1.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
